# cpp-gen

./: .gitignore  .goreleaser.yaml  LICENSE  Makefile  README.md  cliff.toml  go.mod  main.go
.github/workflows/: ci.yml  release.yml
aur/: .SRCINFO  .gitignore  LICENSE  PKGBUILD
cmd/: new.go  root.go
homebrew/: cpp-gen.rb
internal/config/: config.go
internal/generator/: clang.go  cmake.go  generator.go  git.go  structure.go
internal/generator/ide/: clion.go  ide.go  vscode.go  zed.go
internal/generator/layout/: layout.go
internal/generator/vulkan/: vulkan.go
internal/generator/vulkan/templates/: CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
internal/generator/vulkan/templates/cmake/: CompileShaders.cmake  CompilerWarnings.cmake  Vcpkg.cmake
internal/generator/vulkan/templates/shaders/: triangle.frag  triangle.vert
internal/generator/vulkan/templates/src/: CMakeLists.txt  main.cpp
internal/generator/vulkan/templates/tests/: CMakeLists.txt  test_main.cpp
internal/generator/vulkan/templates/vklib/: CMakeLists.txt
internal/generator/vulkan/templates/vklib/include/vklib/: VulkanLib.h
internal/generator/vulkan/templates/vklib/include/vklib/common/: Defines.h  Types.h  VkCheck.h
internal/generator/vulkan/templates/vklib/include/vklib/core/: EngineContext.h  FrameData.h
internal/generator/vulkan/templates/vklib/include/vklib/descriptors/: DescriptorAllocator.h  DescriptorWriter.h
internal/generator/vulkan/templates/vklib/include/vklib/memory/: Buffer.h  Image.h
internal/generator/vulkan/templates/vklib/include/vklib/pipeline/: Pipeline.h  PipelineBuilder.h  ShaderLoader.h
internal/generator/vulkan/templates/vklib/include/vklib/system/: SystemInfo.h
internal/generator/vulkan/templates/vklib/src/: vma_implementation.cpp
internal/generator/vulkan/templates/vklib/src/common/: Types.cpp  VkCheck.cpp
internal/generator/vulkan/templates/vklib/src/core/: EngineContext.cpp  FrameData.cpp
internal/generator/vulkan/templates/vklib/src/descriptors/: DescriptorAllocator.cpp  DescriptorWriter.cpp
internal/generator/vulkan/templates/vklib/src/memory/: Buffer.cpp  Image.cpp
internal/generator/vulkan/templates/vklib/src/pipeline/: Pipeline.cpp  PipelineBuilder.cpp  ShaderLoader.cpp
internal/generator/vulkan/templates/vklib/src/system/: SystemInfo.cpp
internal/tui/: form.go  styles.go
scripts/: aur-publish.sh  homebrew-publish.sh  release.sh
